src/NKnife.TDMS/Externals/nilibddc.h

   typedef DDCChannel*               DDCChannelHandle;
   //*****************************************************************************
   /// <- Obsolete
   //*****************************************************************************
   //*****************************************************************************
   /// <- Object Management
   //*****************************************************************************

   //*****************************************************************************
   /// -> Data Storage
   //*****************************************************************************
   int __stdcall DDC_SetDataValues(DDCChannelHandle channel,
      void *values,
      size_t numValues);
   int __stdcall DDC_SetDataValuesTimestampComponents(DDCChannelHandle channel,
      unsigned int year[],
      unsigned int month[],
      unsigned int day[],
      unsigned int hour[],
      unsigned int minute[],
      unsigned int second[],
      double milliSecond[],
      size_t numValues);
   int __stdcall DDC_AppendDataValues(DDCChannelHandle channel,
      void *values,
      size_t numValues);
   int __stdcall DDC_AppendDataValuesTimestampComponents(DDCChannelHandle channel,
      unsigned int year[],
      unsigned int month[],
      unsigned int day[],
      unsigned int hour[],
      unsigned int minute[],
      unsigned int second[],
      double milliSecond[],
      size_t numValues);
   int __stdcall DDC_ReplaceDataValues(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      void *values,
      size_t numValues);
   int __stdcall DDC_ReplaceDataValuesTimestampComponents(DDCChannelHandle channel,
      size_t indexOfFirstValueToReplace,
      unsigned int year[],
      unsigned int month[],
      unsigned int day[],
      unsigned int hour[],
      unsigned int minute[],
      unsigned int second[],
      double milliSecond[],
      size_t numValues);